--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "npm run build && aws s3 sync --delete build/ s3://jaka-to-nutka"
   },
   "homepage": "https://jbelezina.github.io/GuessTheNote"
 }
