--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "bootstrap": "^4.1.3",
     "gh-pages": "^2.0.0",
     "react": "^16.5.1",
+    "react-confetti": "^2.3.0",
     "react-dom": "^16.5.1",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.5",
+    "react-sizeme": "^2.5.2",
     "redux": "^4.0.0"
   },
   "scripts": {
